[package]
name = "vane-xcm-transfer-system"
version = "1.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = {  workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-std = { workspace = true }
sp-io = {  workspace = true }


# Orml pallet
#orml-tokens = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
#orml-xtokens = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
#orml-traits = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v1.0.0" }
#orml-xcm-support = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v1.0.0" }

#XCM Pallet
pallet-xcm = { workspace = true }
staging-xcm = { workspace = true }
#Local Pallet
#vane-primitive = { version = "1.0.0-dev", default-features = false, path = "../../primitive/vane-primitive"}
log = { version = "0.4.17", default-features = false }

#[dev-dependencies]
#sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
#sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
#sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
#sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
#pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
    "pallet-balances/std",
	"pallet-assets/std",
    "sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"log/std",
    #Custom pallets
#	"orml-tokens/std",
#	"orml-xtokens/std",
#	"orml-traits/std",
#	"orml-xcm-support/std",
#	"vane-primitive/std",
	#----------------
	"pallet-xcm/std",
	"staging-xcm/std",
]
