[package]
name = "vane-primitive"
version = "1.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }

scale-info 											= { workspace = true }
#frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-support										= { workspace = true }
frame-system 										= { workspace = true}
sp-std 												= { workspace = true }
pallet-assets 										= { workspace = true }
pallet-xcm 											= { workspace = true }
staging-xcm 										= { workspace = true }
sp-runtime 											= { workspace = true }
sp-core 											= { workspace = true}
staging-xcm-executor		 						= { workspace = true }
serde 												= { workspace = true }
sp-io = {  workspace = true }


# ORML
#orml-traits = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v1.1.0" }
#orml-xcm-support = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v1.1.0" }



[features]
default = ["std"]
std = [
	"codec/std",
	#"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-xcm/std",
	"staging-xcm/std",
	"sp-runtime/std",
	"sp-core/std",
	"staging-xcm-executor/std",
	"serde/std",
	"sp-io/std"


	# ORML
#	"orml-traits/std",
#	"orml-xcm-support/std"
]
