[package]
authors = { workspace = true }
description = ""
edition = "2021"
homepage = ""
license = "Unlicense"
name = "vane-tanssi-runtime"
repository = ""
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }

hex-literal 										= { workspace = true, optional = true }
log												 	= { workspace = true }
scale-info 											= { workspace = true }
smallvec 											= { workspace = true}



# Local
#vane-register = { version = "1.0.0-dev", default-features = false, path = "../../pallets/vane-register" }
#vane-order = { version = "1.0.0-dev", default-features =  false, path = "../../pallets/vane-order" }
#vane-payment = { version = "1.0.0-dev", default-features = false, path = "../../pallets/vane-payment"}
vane-xcm-transfer-system = {version = "1.0.0-dev", default-features = false,  path ="../../pallets/vane-xcm-transfer-system"}
vane-primitive = { version = "1.0.0-dev", default-features = false, path ="../../primitive/vane-primitive"}

# ORML
#orml-xcm-support = { version ="0.4.1-dev", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }


# Tanssi
tp-consensus 										= { workspace = true }
nimbus-primitives 									= { workspace = true }
pallet-cc-authorities-noting 						= { workspace = true }
pallet-author-inherent 								= { workspace = true }

# polkadot-sdk
frame-benchmarking 									= {	workspace = true, optional = true }
frame-executive 									= { workspace = true }
frame-support 										= { workspace = true }
frame-system 										= { workspace = true }
frame-system-benchmarking 							= { workspace = true, optional = true }
frame-system-rpc-runtime-api 						= { workspace = true }
frame-try-runtime 									= { workspace = true, optional = true }
pallet-authorship 									= { workspace = true }
pallet-assets 										= { workspace = true }
pallet-balances 									= { workspace = true }
pallet-sudo 										= { workspace = true }
pallet-timestamp 									= { workspace = true }
pallet-transaction-payment 							= { workspace = true }
pallet-transaction-payment-rpc-runtime-api 			= { workspace = true }
pallet-utility 										= { workspace = true }
sp-api 												= { workspace = true }
sp-block-builder 									= { workspace = true }
sp-core 											= { workspace = true }
sp-inherents 										= { workspace = true }
sp-offchain 										= { workspace = true }
sp-runtime 											= { workspace = true }
sp-session			 								= { workspace = true }
sp-std 												= { workspace = true }
sp-transaction-pool			 						= { workspace = true }
sp-version 											= { workspace = true }
pallet-xcm 											= { workspace = true }
polkadot-parachain-primitives 						= { workspace = true }
polkadot-runtime-common 							= { workspace = true }
staging-xcm 										= { workspace = true }
staging-xcm-builder 								= { workspace = true }
staging-xcm-executor 								= { workspace = true }


# Cumulus
cumulus-pallet-dmp-queue 							= { workspace = true }
cumulus-pallet-parachain-system 					= { workspace = true, features = ["parameterized-consensus-hook",] }
cumulus-pallet-session-benchmarking 				= { workspace = true }
cumulus-pallet-xcm 									= { workspace = true }
cumulus-pallet-xcmp-queue 							= { workspace = true }
cumulus-primitives-core 							= { workspace = true }
cumulus-primitives-timestamp 						= { workspace = true }
cumulus-primitives-utility 							= { workspace = true }
parachain-info 										= { workspace = true }
parachains-common 									= { workspace = true }
assets-common 										= { workspace = true }





[features]
default = [
	"std",
]
std = [
	"codec/std",
	"hex-literal",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"assets-common/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",

	# Vane pallets
#	"vane-register/std",
#	"vane-order/std",
#	"vane-payment/std",
	"vane-xcm-transfer-system/std",
	"vane-primitive/std",

	# ORML
#	"orml-xcm-support/std",

	# Dev Deps


	# Tanssi
	"tp-consensus/std",
	"nimbus-primitives/std",
	"pallet-cc-authorities-noting/std",
	"pallet-author-inherent/std",

	"sp-api/std",
	"sp-block-builder/std",
#	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"staging-xcm-builder/std",
	"staging-xcm-executor/std",
	"staging-xcm/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
